# stockmarket

./: .gitignore  README.md  common.py  config.env.example  main.py  pipeline.py  pyproject.toml  reporting.py  requirements.txt
calculators/: __init__.py  cashflow_calc.py  dcf_engine.py  governance_calc.py  growth_calc.py  moat_calc.py  peer_comparison.py  quality_calc.py  risk_calc.py  technical_calc.py  valuation_calc.py
confidence/: __init__.py  data_confidence.py
data_collectors/: __init__.py  bse_collector.py  indian_stock_api_collector.py  macro_collector.py  nse_collector.py  rbi_collector.py  screener_collector.py  sebi_collector.py  sector_median_collector.py  technical_collector.py  yfinance_collector.py
database/: __init__.py  db.py  schema.sql
docs/: ARCHITECTURE.md  SOURCES.md
docs/superpowers/plans/: 2026-05-31-indian-equity-platform.md
docs/superpowers/specs/: 2026-05-31-indian-equity-platform-design.md
scoring/: __init__.py  bank_scorer.py  insurance_scorer.py  scoring_engine.py  sector_adjustments.py
tests/: test_confidence.py  test_dcf_engine.py  test_indian_stock_api_collector.py  test_pipeline_outputs.py  test_scoring.py  test_technical_calc.py
tests/fixtures/: sample_companies.json
universe/: __init__.py  nifty_largmidcap250.py  sector_classifier.py
